# structuralinduction.com

./: Main.hs  cabal.config  hello-scotty.cabal  index.html  style.css
static/: 404.html  index.html  style.css
static/posts/: 2014-10-01-sabbatical-plans.html
