name:                           hello-scotty
version:                        0.1
build-type:                     Simple
cabal-version:                  >= 1.10

executable hello-scotty
  main-is:                      Main.hs
  default-language:             Haskell2010
  ghc-options:                  -O2
                                -Wall
                                -funbox-strict-fields
                                -fwarn-tabs
                                -threaded
  build-depends:
    base                        >= 4.6 && < 4.8,
    scotty                      >= 0.7 && < 0.8
