name:                           hello-scotty
version:                        0.1
build-type:                     Simple
cabal-version:                  >= 1.10

executable hello-scotty
  main-is:                      Main.hs
  default-language:             Haskell2010
  ghc-options:                  -O2
                                -Wall
                                -funbox-strict-fields
                                -fwarn-tabs
                                -threaded
  build-depends:
    base                        >= 4.6 && < 4.8,
    scotty                      >= 0.7 && < 0.8,
    directory                   >= 1.2.1,
    transformers                == 0.3.0.0,
    text                        == 1.1.1.3,
    filepath                    == 1.3.0.2
